[project]
name = "fysm-randomizer-bot"
version = "0.1.0"
description = "Telegram bot for FYSM practice generation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.16.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "punq>=0.7.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    "venv",
    "alembic",
]
src = ["bot"]
line-length = 119
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
exclude = ["fixtures", "alembic"]
plugins = ["pydantic.mypy"]
